--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
+    "@types/node": "^24.3.0",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@types/three": "^0.179.0",
@@ -24,6 +25,7 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
     "immer": "^10.1.1",
+    "terser": "^5.43.1",
     "three": "^0.179.1",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.39.1",
