--- a/Dockerfile.simple
+++ b/Dockerfile.simple
@@ -19,4 +19,4 @@ HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
   CMD wget --quiet --tries=1 --spider http://localhost:${PORT:-3000}/health || exit 1
 
 # Start the server
-CMD ["node", "server.js"]
+CMD ["node", "server.cjs"]
