--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start": "node server.cjs",
-    "postinstall": "npm run build"
+    "start": "npm run build && node server.cjs"
   },
   "dependencies": {
     "express": "^4.18.2",
